@@ -1,6 +1,8 @@
 <h1>
-  <%=h @exception.class.to_s %> in
-  <%=h (@request.parameters["controller"] || "<controller not set>").capitalize %>#<%=h @request.parameters["action"] || "<action not set>" %>
+  <%=h @exception.class.to_s %>
+  <% if @request.parameters['controller'] %>
+    in <%=h @request.parameters['controller'].humanize %>Controller<% if @request.parameters['action'] %>#<%=h @request.parameters['action'] %><% end %>
+  <% end %>
 </h1>
 <pre><%=h @exception.clean_message %></pre>
 
