@@ -41,6 +41,25 @@ class ExceptionExtTests < Test::Unit::TestCase
     assert_kind_of Exception, e
     assert_equal ['vendor/file.rb some stuff', ' vendor/file.rb some stuff'], e.framework_backtrace
   end
-
   
+  def test_backtrace_should_clean_paths
+    Exception::TraceSubstitutions << [/\s*hidden.*/, '']
+    e = get_exception RuntimeError, 'RAWR', ['a/b/c/../d/../../../bhal.rb', 'rawh hid den stuff is not here', 'almost all']
+    assert_kind_of Exception, e
+    assert_equal ['bhal.rb', 'rawh hid den stuff is not here', 'almost all'], e.clean_backtrace
+  end
+  
+  def test_clean_message_should_clean_paths
+    Exception::TraceSubstitutions << [/\s*hidden.*/, '']
+    e = get_exception RuntimeError, "I dislike a/z/x/../../b/y/../c", ['a/b/c/../d/../../../bhal.rb', 'rawh hid den stuff is not here', 'almost all']
+    assert_kind_of Exception, e
+    assert_equal "I dislike a/b/c", e.clean_message
+  end
+  
+  def test_app_trace_should_be_empty_when_no_app_frames
+    Exception::TraceSubstitutions << [/\s*hidden.*/, '']
+    e = get_exception RuntimeError, 'RAWR', ['vendor/file.rb some stuff', 'generated/bhal.rb', ' vendor/file.rb some stuff', 'generated/almost all']
+    assert_kind_of Exception, e
+    assert_equal [], e.application_backtrace
+  end
 end
