@@ -1,5 +1,9 @@
 * SVN *
 
+* Clean paths inside of exception messages and traces. [Nicholas Seckar]
+
+* Add Pathname.clean_within for cleaning all the paths inside of a string. [Nicholas Seckar]
+
 * provide an empty Dependencies::LoadingModule.load which prints deprecation warnings.  Lets 1.0 applications function with .13-style environment.rb.
 
 *1.3.0* (March 27th, 2005)
